// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFF() should initialize Formik state and pass down props 1`] = `
Object {
  "active": Object {},
  "dirty": false,
  "errors": Object {},
  "formStarted": false,
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleClick": [Function],
  "handleReset": [Function],
  "handleSubmit": [Function],
  "initialValues": Object {
    "firstName": "Nathan",
    "lastName": "Vale",
  },
  "isSubmitting": false,
  "isValid": false,
  "isValidating": false,
  "registerField": [Function],
  "resetForm": [Function],
  "setError": [Function],
  "setErrors": [Function],
  "setFieldError": [Function],
  "setFieldTouched": [Function],
  "setFieldValue": [Function],
  "setFormikState": [Function],
  "setState": [Function],
  "setStatus": [Function],
  "setSubmitting": [Function],
  "setTouched": [Function],
  "setValues": [Function],
  "submitCount": 0,
  "submitForm": [Function],
  "touched": Object {},
  "unregisterField": [Function],
  "validateField": [Function],
  "validateForm": [Function],
  "validateOnBlur": true,
  "validateOnChange": true,
  "values": Object {
    "firstName": "Nathan",
    "lastName": "Vale",
  },
}
`;

exports[`withFF() should reset the form 1`] = `
Object {
  "active": Object {},
  "dirty": false,
  "error": undefined,
  "errors": Object {},
  "formStarted": false,
  "handleBlur": [Function],
  "handleChange": [Function],
  "handleClick": [Function],
  "handleReset": [Function],
  "handleSubmit": [Function],
  "initialValues": Object {
    "firstName": "Nathan",
    "lastName": "Vale",
  },
  "isSubmitting": false,
  "isValid": false,
  "isValidating": false,
  "registerField": [Function],
  "resetForm": [Function],
  "setError": [Function],
  "setErrors": [Function],
  "setFieldError": [Function],
  "setFieldTouched": [Function],
  "setFieldValue": [Function],
  "setFormikState": [Function],
  "setState": [Function],
  "setStatus": [Function],
  "setSubmitting": [Function],
  "setTouched": [Function],
  "setValues": [Function],
  "status": undefined,
  "submitCount": 0,
  "submitForm": [Function],
  "touched": Object {},
  "unregisterField": [Function],
  "validateField": [Function],
  "validateForm": [Function],
  "validateOnBlur": true,
  "validateOnChange": true,
  "values": Object {
    "firstName": "Nathan",
    "lastName": "Vale",
  },
}
`;
